fix 修复查询办理人错误使用